FEAT: Finalização de todos os endpoints necessários para começar o desenvolvimento do frontend